--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             /(^|\s)#[a-z0-9\u3040-\u309f\u30a0-\u30ff\uff00-\uff9f\u4e00-\u9faf\u3400-\u4dbf]+/gi
           ) ?? []
         )
-          .map((tag) => ["t", tag.substring(1)])
+          .map((tag) => ["t", tag.substring(tag.indexOf("#") + 1)])
           .flat();
 
         const event = {
