--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       const extractHashtagTags = (content) => {
         return (
-          content.value.match(
+          content.match(
             /(^|\s)#[a-z0-9\u3040-\u309f\u30a0-\u30ff\uff00-\uff9f\u4e00-\u9faf\u3400-\u4dbf]+/gi
           ) ?? []
         )
