--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
         const sk = window.NostrTools.nip19.decode(nsec.value).data;
         const pk = window.NostrTools.getPublicKey(sk);
 
-        const event = {
-          kind: 1,
-          pubkey: pk,
-          created_at: Math.floor(Date.now() / 1000),
-          tags: [
-            ...extractReferenceTags(content.value),
-            ...extractHashtagTags(content.value),
-            ...(await createReplyTags(nip19.value)),
-          ].filter((tag) => tag.length > 0),
-          content: content.value,
-        };
-        event.id = window.NostrTools.getEventHash(event);
-        event.sig = window.NostrTools.getSignature(event, sk);
+        const event = window.NostrTools.finishEvent(
+          {
+            kind: 1,
+            created_at: Math.floor(Date.now() / 1000),
+            tags: [
+              ...extractReferenceTags(content.value),
+              ...extractHashtagTags(content.value),
+              ...(await createReplyTags(nip19.value)),
+            ].filter((tag) => tag.length > 0),
+            content: content.value,
+          },
+          sk
+        );
 
         const pool = new window.NostrTools.SimplePool();
         pool.publish(RELAYS, event);
