コードを整形する

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
           content.match(
             /(^|\s)#[a-z0-9\u3040-\u309f\u30a0-\u30ff\uff00-\uff9f\u4e00-\u9faf\u3400-\u4dbf]+/gi
           ) ?? []
-        )
-          .map((tag) => ["t", tag.substring(tag.indexOf("#") + 1)]);
+        ).map((tag) => ["t", tag.substring(tag.indexOf("#") + 1)]);
       };
 
       const extractReferenceTags = (content) => {
@@ -67,8 +66,7 @@
           content.match(
             /https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)/gi
           ) ?? []
-        )
-          .map((url) => ["r", url]);
+        ).map((url) => ["r", url]);
       };
 
       const handleClick = async () => {
