--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
       <textarea id="content" rows="4" cols="50"></textarea>
     </div>
     reply to:
-    <input id="nip19" type="text" size="50" /><br />
+    <input
+      id="nip19"
+      type="text"
+      size="50"
+      placeholder="nevent1... or nostr:nevent1..."
+    /><br />
     nsec:
     <input id="nsec" type="text" size="50" /><br />
     <button onclick="handleClick()">投稿</button><br />
