重複したコードを関数に抽出する

--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
         "wss://relay.nostr.bg",
       ];
 
+      const createEvent = async () => {
+        const sk = window.NostrTools.nip19.decode(nsec.value).data;
+        const pk = window.NostrTools.getPublicKey(sk);
+
+        return window.NostrTools.finishEvent(
+          {
+            kind: 1,
+            created_at: Math.floor(Date.now() / 1000),
+            tags: [
+              ...createEventTags(content.value),
+              ...createPubkeyTags(content.value),
+              ...extractReferenceTags(content.value),
+              ...extractHashtagTags(content.value),
+              ...(await createReplyTags(nip19.value)),
+              ...(encryptionNsec.value ? [["encrypted"]] : []),
+            ].filter((tag) => tag.length > 0),
+            content: encryptionNsec.value
+              ? await window.NostrTools.nip04.encrypt(
+                  window.NostrTools.nip19.decode(encryptionNsec.value).data,
+                  pk,
+                  content.value
+                )
+              : content.value,
+          },
+          sk
+        );
+      };
+
       const createEventTags = (content) =>
         [...window.NostrTools.nip27.matchAll(content)]
           .filter(({ decoded: { type } }) => type == "nevent" || type == "note")
@@ -97,31 +125,7 @@
       };
 
       const handleClick = async () => {
-        const sk = window.NostrTools.nip19.decode(nsec.value).data;
-        const pk = window.NostrTools.getPublicKey(sk);
-
-        const event = window.NostrTools.finishEvent(
-          {
-            kind: 1,
-            created_at: Math.floor(Date.now() / 1000),
-            tags: [
-              ...createEventTags(content.value),
-              ...createPubkeyTags(content.value),
-              ...extractReferenceTags(content.value),
-              ...extractHashtagTags(content.value),
-              ...(await createReplyTags(nip19.value)),
-              ...(encryptionNsec.value ? [["encrypted"]] : []),
-            ].filter((tag) => tag.length > 0),
-            content: encryptionNsec.value
-              ? await window.NostrTools.nip04.encrypt(
-                  window.NostrTools.nip19.decode(encryptionNsec.value).data,
-                  pk,
-                  content.value
-                )
-              : content.value,
-          },
-          sk
-        );
+        const event = await createEvent();
 
         const pool = new window.NostrTools.SimplePool();
         pool.publish(RELAYS, event);
@@ -134,31 +138,7 @@
       };
 
       const handleStringifyClick = async () => {
-        const sk = window.NostrTools.nip19.decode(nsec.value).data;
-        const pk = window.NostrTools.getPublicKey(sk);
-
-        const event = window.NostrTools.finishEvent(
-          {
-            kind: 1,
-            created_at: Math.floor(Date.now() / 1000),
-            tags: [
-              ...createEventTags(content.value),
-              ...createPubkeyTags(content.value),
-              ...extractReferenceTags(content.value),
-              ...extractHashtagTags(content.value),
-              ...(await createReplyTags(nip19.value)),
-              ...(encryptionNsec.value ? [["encrypted"]] : []),
-            ].filter((tag) => tag.length > 0),
-            content: encryptionNsec.value
-              ? await window.NostrTools.nip04.encrypt(
-                  window.NostrTools.nip19.decode(encryptionNsec.value).data,
-                  pk,
-                  content.value
-                )
-              : content.value,
-          },
-          sk
-        );
+        const event = await createEvent();
 
         document.querySelector("#event").innerText = JSON.stringify(
           event,
