URL のクエリ文字列から reply to の値を設定できるようにする
Closes #18

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
           2
         );
       };
+
+      nip19.value = new URLSearchParams(location.search).get("nip19");
     </script>
   </body>
 </html>
